@@ -92,3 +92,4 @@
 - Will retry to enroll if the server return a 429. {pull}19918[19811]
 - Allow to specify what artifacts to embed at build times {pull}20019[20019]
 - Add --staging option to enroll command {pull}20026[20026]
+- Add `event.dataset` to all events {pull}20076[20076]
